--- a/be/src/block_cache/CMakeLists.txt
+++ b/be/src/block_cache/CMakeLists.txt
@@ -8,15 +8,22 @@ set(EXECUTABLE_OUTPUT_PATH "${BUILD_DIR}/src/block_cache")
 
 set(CACHE_FILES
   block_cache.cpp
-  fb_cachelib.cpp
+  star_cachelib.cpp
 )
+
+if (${WITH_CACHELIB} STREQUAL "ON")
+    list(APPEND CACHE_FILES fb_cachelib.cpp)
+endif()
 
 add_library(BlockCache STATIC
     ${CACHE_FILES}
 )
 
-set(CACHELIB_DIR ${THIRDPARTY_DIR}/cachelib)
-link_directories(${CACHELIB_DIR}/deps/lib64)
+if (${WITH_CACHELIB} STREQUAL "ON")
+    set(CACHELIB_DIR ${THIRDPARTY_DIR}/cachelib)
+    link_directories(${CACHELIB_DIR}/deps/lib64)
 
-include_directories(AFTER ${CACHELIB_DIR}/include)
-include_directories(AFTER ${CACHELIB_DIR}/deps/include)
+    include_directories(AFTER ${CACHELIB_DIR}/include)
+    include_directories(AFTER ${CACHELIB_DIR}/deps/include)
+endif()
+
